# nand2tetris

./: README.md
definitions/: DFlipFlop.hdl  DLatch.hdl  README.md  SRLatch.hdl
hack-assembler/: README.md  ebnf.md  makefile  pyproject.toml
hack-assembler/hack-assembler/: lexer.py  main.py
hack-assembler/hack_assembler/: ast.py  ast_visitor.py  code_generator.py  constants.py  errors.py  lexer.py  main.py  parser.py  semantic_analyzer.py  symbol_table.py  tokens.py  translator.py
jack-vm-translator/: .gitignore  README.md  makefile  poetry.toml  pyproject.toml
jack-vm-translator/jack_vm_translator/: VMTranslator.py  _ast_.py  _code_gen.py  _errors.py  _lexer.py  _token.py  makefile
practices/: Imply.hdl  Imply.tst  Neg16.hdl  Nor.hdl  Nor.tst  Register16.tst  Register64.tst  Sub16.hdl  Sub16.tst  Xnor.hdl
practices/hack-asm/: add.asm  branching1.asm  branching2.asm  iterative.asm  pointer.asm  screen.asm  variable.asm
practices/hdl/: Imply.cmp  Imply.hdl  Mux64.hdl  Nimply.cmp  Nimply.hdl  Nimply.tst  Nor.hdl  Register16.hdl  Register64.hdl  Sub16.cmp
projects/01/: And.hdl  DMux.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux16.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Or16.hdl  Or8Way.hdl  Xor.hdl
projects/02/: ALU.hdl  Add16.hdl  FullAdder.hdl  HalfAdder.hdl  Inc16.hdl  Xor16.hdl
projects/03/: Bit.hdl  PC.hdl  RAM16K.hdl  RAM4K.hdl  RAM512.hdl  RAM64.hdl  RAM8.hdl
projects/04/Fill/: Fill.asm
projects/05/: CPU.hdl  Computer.hdl  Memory.hdl
projects/06/: Max.hack  PongL.hack
projects/07/: _constants.py  _node_visitor.py  _parser.py  _utils.py
(+1 files in other folders)
