[project]
name = "hack-assembler"
version = "0.1.0"
description = "A hack assembler written in Python"
authors = [
    {name = "Tam Nguyen",email = "nguyenhothanhtam0709@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.0"

